--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack serve",
-    "build": "npm run prettier && npm run eslint && webpack",
+    "build": "npm run prettier && webpack",
     "prettier": "prettier --write . --log-level warn",
     "eslint": "eslint src/** --fix"
   },
@@ -14,8 +14,8 @@
   "devDependencies": {
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "eslint": "^8.57.1",
+    "@typescript-eslint/eslint-plugin": "8.18.1",
+    "eslint": "8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "html-webpack-plugin": "5.6.3",
     "prettier": "3.4.2",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-router": "7.0.2"
   }
 }
