--- a/package.json
+++ b/package.json
@@ -11,22 +11,31 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@mantine/core": "7.15.3",
+    "@mantine/hooks": "7.15.3",
+    "@tabler/icons": "^3.27.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router": "7.0.2"
+  },
   "devDependencies": {
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
     "@typescript-eslint/eslint-plugin": "8.18.1",
+    "css-loader": "7.1.2",
     "eslint": "8.57.1",
     "eslint-plugin-react": "^7.37.2",
     "html-webpack-plugin": "5.6.3",
+    "postcss": "8.4.49",
+    "postcss-loader": "8.1.1",
+    "postcss-preset-mantine": "1.17.0",
+    "postcss-simple-vars": "7.0.1",
     "prettier": "3.4.2",
+    "style-loader": "4.0.0",
     "ts-loader": "9.5.1",
     "webpack": "5.97.1",
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.2.0"
-  },
-  "dependencies": {
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-router": "7.0.2"
   }
 }
