--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@mantine/core": "7.15.3",
     "@mantine/hooks": "7.15.3",
-    "@tabler/icons": "^3.27.1",
+    "@tabler/icons-react": "3.28.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "7.0.2"
