--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mantine/core": "7.15.3",
     "@mantine/hooks": "7.15.3",
     "@tabler/icons-react": "3.28.1",
+    "immer": "10.1.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-router": "7.0.2"
+    "react-router": "7.0.2",
+    "zustand": "4.5.2"
   },
   "devDependencies": {
     "@types/react": "19.0.1",
