--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "immer": "10.1.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-jss": "^10.10.0",
     "react-router": "7.0.2",
+    "sass": "^1.83.4",
     "zustand": "4.5.2"
   },
   "devDependencies": {
