migrate to biome

--- a/package.json
+++ b/package.json
@@ -1,48 +1,49 @@
 {
-  "name": "ams-react",
-  "version": "1.0.0",
-  "description": "AMS-REACT",
-  "main": "index.js",
-  "scripts": {
-    "academy": "cross-env APP=academy webpack serve",
-    "shop": "cross-env APP=shop webpack serve",
-    "build": "npm run prettier && webpack",
-    "prettier": "prettier --write . --log-level warn",
-    "eslint": "eslint src/** --fix"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@mantine/core": "7.15.3",
-    "@mantine/hooks": "7.15.3",
-    "@tabler/icons-react": "3.28.1",
-    "immer": "10.1.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-jss": "^10.10.0",
-    "react-router": "7.0.2",
-    "sass": "^1.83.4",
-    "zustand": "4.5.2"
-  },
-  "devDependencies": {
-    "@types/react": "19.0.1",
-    "@types/react-dom": "19.0.2",
-    "@typescript-eslint/eslint-plugin": "8.18.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "7.1.2",
-    "dotenv-webpack": "^8.1.0",
-    "eslint": "8.57.1",
-    "eslint-plugin-react": "^7.37.2",
-    "html-webpack-plugin": "5.6.3",
-    "postcss": "8.4.49",
-    "postcss-loader": "8.1.1",
-    "postcss-preset-mantine": "1.17.0",
-    "postcss-simple-vars": "7.0.1",
-    "prettier": "3.4.2",
-    "style-loader": "4.0.0",
-    "ts-loader": "9.5.1",
-    "webpack": "5.97.1",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.2.0"
-  }
+	"name": "ams-react",
+	"version": "1.0.0",
+	"description": "AMS-REACT",
+	"main": "index.js",
+	"scripts": {
+		"academy": "cross-env APP=academy webpack serve",
+		"shop": "cross-env APP=shop webpack serve",
+		"build": "npm run prettier && webpack",
+		"lint": "biome check --fix .",
+		"eslint": "eslint src/** --fix"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@mantine/core": "7.15.3",
+		"@mantine/hooks": "7.15.3",
+		"@tabler/icons-react": "3.28.1",
+		"immer": "10.1.1",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-jss": "^10.10.0",
+		"react-router": "7.0.2",
+		"sass": "^1.83.4",
+		"zustand": "4.5.2"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/react": "19.0.1",
+		"@types/react-dom": "19.0.2",
+		"@typescript-eslint/eslint-plugin": "8.18.1",
+		"cross-env": "^7.0.3",
+		"css-loader": "7.1.2",
+		"dotenv-webpack": "^8.1.0",
+		"eslint": "8.57.1",
+		"eslint-plugin-react": "^7.37.2",
+		"html-webpack-plugin": "5.6.3",
+		"postcss": "8.4.49",
+		"postcss-loader": "8.1.1",
+		"postcss-preset-mantine": "1.17.0",
+		"postcss-simple-vars": "7.0.1",
+		"prettier": "3.4.2",
+		"style-loader": "4.0.0",
+		"ts-loader": "9.5.1",
+		"webpack": "5.97.1",
+		"webpack-cli": "5.1.4",
+		"webpack-dev-server": "5.2.0"
+	}
 }
