--- a/biome.json
+++ b/biome.json
@@ -21,7 +21,8 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"correctness": { "noUnusedVariables": "error" }
 		}
 	},
 	"javascript": {
