--- a/biome.json
+++ b/biome.json
@@ -22,7 +22,11 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
-			"correctness": { "noUnusedVariables": "error" }
+			"correctness": {
+				"noUnusedVariables": "warn",
+				"noUnusedImports": "warn",
+				"noUnusedFunctionParameters": "warn"
+			}
 		}
 	},
 	"javascript": {
